# langchain-bin

./: Dockerfile  docker-compose.yaml  run-llama.sh
chatbot/: pyproject.toml
chatbot/src/chatbot/: app.py
ollama-chat/: README.md  pyproject.toml
ollama-chat/src/ollama_chat/: app.py
ollama-tool-calling/: pyproject.toml
ollama-tool-calling/src/ollama_tool_calling/: app.py
semantic-search/: pyproject.toml
semantic-search/src/semantic_search/: app.py
