[project]
name = "ollama-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Subhashis Pradhan",email = "pradhan.subhasis174@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama (>=0.3.3,<0.4.0)"
]

[tool.poetry]
packages = [{include = "ollama_chat", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
