[project]
name = "ollama-tool-calling"
version = "0.1.0"
description = ""
authors = [
    { name = "Subhashis Pradhan", email = "pradhan.subhasis174@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ollama (>=0.5.1,<0.6.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain-core (>=0.3.66,<0.4.0)",
    "langchain (>=0.3.26,<0.4.0)",
]

[tool.poetry]
packages = [{ include = "ollama_tool_calling", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
