[project]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = [
    { name = "Subhashis Pradhan", email = "pradhan.subhasis174@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["langchain-community (>=0.3.26,<0.4.0)", "pypdf (>=5.6.1,<6.0.0)", "langchain-ollama (>=0.3.3,<0.4.0)"]

[tool.poetry]
packages = [{ include = "semantic_search", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
